--- a/README
+++ b/README
@@ -2,7 +2,7 @@ c.py
 ====
 
 c.py is (not yet) a drop in replacement for cat. c.py is written in a few lines
-of Python code and provides additional features, for instance automatic synthax
+of Python code and provides additional features, for instance automatic syntax
 highlighting with pygments and paging support. See the manpage c(1) for more
 information.
 
